2012-07-06  Corinna Vinschen  <corinna@vinschen.de>

	* libc/rcmd.cc: Don't undef __INSIDE_CYGWIN_NET__.

2012-07-06  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.sc (.rdata):  Include all sections starting with .rdata.
	(.debug_pubtypes): Make sure section is loaded at the end like all other
	debug sections.

2012-07-04  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* dcrt0.cc (build_argv): Guard against NULL pointer dereference found
	by Clang.

2012-07-04  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* exceptions.cc (setup_handler): Remove unneeded assignment found by
	Clang.

2012-07-04  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* hookapi.cc (find_first_notloaded_dll): Remove unused assignment of
	importRVASize found by Clang.

2012-07-04  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler_tty.cc (fhandler_pty_slave::read): Remove duplicate
	assignment to bytes_in_pipe found by Clang.

2012-07-02  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* exceptions.cc (exception::handle): Use error_code in klog, as
	intended.  Found by Clang.

2012-07-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_dev_clipboard): Remove member eof.
	* fhandler_clipboard.cc: Throughout remove handling of eof member.
	(fhandler_dev_clipboard::write): Handle EOF condition immediately,
	rather than pushing it erroneously to the next read call.  Rearrange
	code.  Fix bug in CF_UNICODETEXT case which potentially dropped single
	bytes at the end of the buffer.  Add comment.
	* strfuncs.cc (sys_cp_wcstombs): Allow returning non-NUL-terminated
	buffer if dst != NULL and len == (size_t) -1.  Extend leading comment
	to explain what's returned in more detail.

2012-07-02  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler_virtual.cc (fhandler_virtual::opendir): Eliminate duplicate
	assignment found by Clang.

2012-07-02  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler_registry.cc (fhandler_registry::open): Handle missing EROFS