@@ -1,5 +1,9 @@
 2012-07-06  Corinna Vinschen  <corinna@vinschen.de>
 
+	* winsup.h (_WIN32_WINNT): Define.  Explain why.
+
+2012-07-06  Corinna Vinschen  <corinna@vinschen.de>
+
 	* libc/rcmd.cc: Don't undef __INSIDE_CYGWIN_NET__.
 
 2012-07-06  Corinna Vinschen  <corinna@vinschen.de>
